Code pretty much done

--- a/arm_move/config/waypoints.yaml
+++ b/arm_move/config/waypoints.yaml
@@ -1,1 +1,1 @@
-waypoints: [[0.05,0.05,0.05],[0.1,0.1,0.1],[0.1,-0.1,0.1],[0.1,-0.1,0.02]]
+waypoints: [[0.05,0.05,0.05,'Open'],[0.1,0.1,0.1,'Closed'],[0.1,-0.1,0.1,'Closed'],[0.1,-0.1,0.02,'Open']]
