--- a/arm_move/package.xml
+++ b/arm_move/package.xml
@@ -58,6 +58,8 @@
   <exec_depend>message_runtime</exec_depend>
   <build_depend>moveit_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <!-- <build_depend>rostest</build_depend> -->
+  <test_depend>rostest</test_depend>
   <build_depend>message_generation</build_depend>
   <build_export_depend>moveit_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
